--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,30 @@
 [package]
 name = "emailservice"
 version = "0.1.0"
+authors = ["Volkan Cakil <>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+# We could use any path here, but we are following the community convention
+# We could specify a library name using the `name` field. If unspecified,
+# cargo will default to `package.name`, which is what we want.
+path = "src/lib.rs"
+
+# Notice the double square brackets: it's an array in TOML's syntax.
+# We can only have one library in a project, but we can have multiple binaries!
+# If you want to manage multiple libraries in the same repository
+# have a look at the workspace feature - we'll cover it later on.
+[[bin]]
+path = "src/main.rs"
+name = "emailservice"
+
 [dependencies]
+actix-web = "4.0.0-beta.9"
+actix-http = "3.0.0-beta.10"
+
+[dev-dependencies]
+actix-rt = "2.2.0"
+reqwest = "0.11.4"
+tokio = "1.11.0"
