--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,11 @@ name = "emailservice"
 [dependencies]
 actix-web = "4.0.0-beta.9"
 actix-http = "3.0.0-beta.10"
+# We need the optional `derive` feature to use `serde`'s procedural macros:
+# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
+# The feature is not enabled by default to avoid pulling in
+# unnecessary dependencies for projects that do not need it.
+serde = { version = "1.0.130", features = ["derive"]}
 
 [dev-dependencies]
 actix-rt = "2.2.0"
