--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -1,8 +1,9 @@
 name: Rust
 
 on:
+  # NB: this differs from the book's project!
   # These settings allow us to run this specific CI pipeline for PRs against
-  # this specific branch (a.k.a. main).
+  # this specific branch (a.k.a. book chapter).
   push:
     branches:
       - main
@@ -33,6 +34,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Cache dependencies
         id: cache-dependencies
         uses: actions/cache@v2
@@ -42,6 +44,7 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -115,8 +118,8 @@ jobs:
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
-          components: clippy
           toolchain: stable
+          components: clippy
           override: true
 
       - name: Cache sqlx-cli
