--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "emailservice"
 version = "0.1.0"
-authors = ["Volkan Cakil <>"]
+authors = ["Volkan Cakil <2703634+volkancakil@users.noreply.github.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -28,8 +28,24 @@ actix-http = "3.0.0-beta.10"
 # The feature is not enabled by default to avoid pulling in
 # unnecessary dependencies for projects that do not need it.
 serde = { version = "1.0.130", features = ["derive"]}
+config = "0.11.0"
+uuid = { version = "0.8.2", features = ["v4"]}
+chrono = "0.4.19"
 
 [dev-dependencies]
 actix-rt = "2.2.0"
 reqwest = "0.11.4"
 tokio = "1.11.0"
+
+# Using table-like toml syntax to avoid a super-long line!
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
