--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -91,6 +91,7 @@ jobs:
           toolchain: stable
           override: true
           components: rustfmt
+      - run: rustup component add rustfmt
       - uses: actions-rs/cargo@v1
         with:
           command: fmt
